--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_blue: ^0.8.0
+  get: ^4.6.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
