modified:   android/app/src/main/AndroidManifest.xml 	new file:   assets/icon/account_ico.png 	new file:   assets/icon/dot_orange.png 	new file:   assets/icon/whistle_green.png 	modified:   lib/home/home_page.dart 	modified:   lib/main.dart 	modified:   lib/widgets/map/map_page.dart 	modified:   lib/widgets/whistle/whistle_page.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,10 @@ dependencies:
   flutter_blue: ^0.8.0
   get: ^4.6.5
   http: ^0.13.5
-  google_nav_bar: ^5.0.6
+  google_maps_flutter: ^2.2.2
+  permission_handler: ^10.2.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
