--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,12 @@ dependencies:
   http: ^0.13.5
   google_maps_flutter: ^2.2.2
   permission_handler: ^10.2.0
-  geolocator: ^9.0.2
+  location: ^4.4.0
   geocoding: ^2.0.5
+  just_audio: ^0.9.30
+  #flutter local notification 
+  flutter_local_notifications: ^12.0.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
